# rfp-automation-multi-agent-system

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  Procfile  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
alembic/: env.py
alembic/versions/: 55af1d54e09f_create_initial_tables.py
app/: main.py  reset_db.py
app/agents/answer_generator/: __init__.py  graph.py  state.py
app/agents/answer_generator/nodes/: decompose.py  generate.py  search.py  search_attributes.py
app/agents/kb_manager/: __init__.py  graph.py  state.py
app/agents/kb_manager/nodes/: find_conflicts.py  load_existing.py  resolve_conflicts.py  save_attributes.py
app/api/routes/: attributes.py  auth.py  billing.py  documents.py  rfps.py  users.py  webhooks.py
app/api/schemas/: attribute.py  document.py  rfp.py
app/core/: auth.py  config.py  database.py  errors.py  plans.py
app/models/: __init__.py  attribute.py  company.py  document.py  document_quota.py  resync_quota.py  rfp_project.py  rfp_question.py  usage.py  user.py  user_company.py  vector_chunk.py
app/prompts/: answer_generator.py  attribute_extractor.py  kb_manager.py  question_extractor.py
app/services/: attribute_extractor.py  attribute_search.py  billing_service.py  document_processor.py  email_service.py  embedding_service.py  export_service.py  llm_factory.py  rag_service.py  rate_limiter.py  rfp_parser.py  storage.py  usage_service.py
app/workers/: attribute_tasks.py  celery_app.py  rfp_tasks.py  tasks.py
