[project]
name = "rfp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "celery>=5.5.3",
    "clerk-backend-sdk>=1.1.1",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.7",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.44",
    "supabase>=2.22.0",
    "uvicorn>=0.37.0",
]
