[project]
name = "rfp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "celery>=5.5.3",
    "chardet>=5.2.0",
    "clerk-backend-sdk>=1.1.1",
    "cohere>=5.18.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.6.10",
    "openai>=2.3.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.7",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "rank-bm25>=0.2.2",
    "redis>=6.4.0",
    "reportlab>=4.4.4",
    "sqlalchemy>=2.0.44",
    "supabase>=2.22.0",
    "uvicorn>=0.37.0",
]
